        - XPath expression evaluation could swallow some exceptions
          in XmlRepresentation subclasses. Reported by Richard 
          Hoberman.
        - Fixed potential NPE with Digest authentication when the 
          client's identifier is not known.
        - Fixed potential thread safety issues with client connectors.
          Reported by Tim Peierls.
    - API enhancements
        - Added a "tcpNoDelay" option for internal and Apache HTTP 
          clients. Contributed by Kevin Conaway.
        - Added a DigestRepresentation that allows to both use an 
          entity and compute its digest value. Suggested by Kevin 
          Conaway.
        - Added the handling of server or client connector's context 
          when adding a connector respectively to servers and clients 
          list of a component.
        - Refactored constructors of the ParameterInfo class in the 
          WADL extension in order to reflect the fact that "name" and 
          "style" attributes are required.
        - Added the ability the give a title to WadlApplication or 
          WadlResource instances. Suggested by Jérôme Bernard.
    - Misc
        - Updated JAX-RS API to version 1.0. The implementation of the
          runtime environment is not fully finished yet. We are 
          waiting for an access to the TCK.
        - Updated Grizzly to latest 1.8.6.1 version.
        - Improved the performance of the ByteUtils#toString() methods
          significantly using a buffer. Impact the performance of the 
          Representation#toString() method. Reported by Aaron Crow.
        - Removed unecessary 'final' modifiers in catch clauses.
          Reported by Richard Hoberman.
        - ServerServlet now copies all attributes from the Servlet 
          context into the component's context.
        - Fixed Resource#allowPut() error in Javadocs. Reported by 
          Erik Beeson.
        
- 1.1 Release Candidate 2 (2008-09-24)
    - Bugs fixed